@@ -1,5 +1,10 @@
 CHANGES IN FLTK 1.3.0
 
+	- Avoiding crashes for recursive common dialogs (this does not 
+	  fix the issue at hand yet) (STR #1986, 2150)
+	- Added menu shortcut alignment for OS X
+	- Fixed bad system menu hadling in OS X (STR #2153)
+	- Fixed File Input mouse pointer dragging (STR #2181)
 	- Added alternative text input awareness on OS X 
 	- Fixed 'del' keycode on OS X (must be verified for all keyboards)
 	- Fixed OS X support for sending and receiving dnd data as utf8
